fixed icon sizes on mobile display

--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ h2 {
 
 .textContainer p {
     font-size: 1.2rem;
+    font-family: 'Courier New', Courier, monospace;
     font-weight: 200;
     margin: 25px 0;
 }
@@ -125,10 +126,11 @@ button {
     background-color: #fcfcfc;
     color: #000;
     font-size: 1.2rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-transform: uppercase;
     text-align: center;
     padding: 20px;
-    margin-top: 100px;
+    margin-top: 20px;
 }
 
 /* Gallery Section */
@@ -163,11 +165,13 @@ button {
 
 .mediaFlex {
     display: flex;
+   
 }
 
 h3 {
     text-align: center;
     text-transform: uppercase;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 /* Footer Styles */
@@ -180,6 +184,7 @@ footer {
 
 footer p {
     padding: 10px 0;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 @media (max-width: 700px) {
@@ -187,6 +192,10 @@ footer p {
         max-width: 700px;
         width: 90%;
         margin: 0 auto;
+    }
+
+    .headerFlex {
+        flex-direction: row-reverse;
     }
 
     h1 {
@@ -231,6 +240,8 @@ footer p {
     .mediaFlex {
         display: flex;
         flex-direction: column;
+        max-width: min-content;
+        margin-left: 200px;
     }
 
     h3 {
